kubernetes-specification/13-extending-kubernetes/codes/custom-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-scheduler
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      component: scheduler
      custom: "true"
  template:
    metadata:
      labels:
        component: scheduler
        custom: "true"
    spec:
      containers:
        - name: scheduler
          image: my-custom-scheduler:v1.0
          args:
            - --config=/etc/kubernetes/scheduler-config.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/kubernetes/
      volumes:
        - name: config
          configMap:
            name: scheduler-config
